--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       resultDiv.textContent = 'Generating video...';
 
       try {
-        const response = await fetch('https://your-vercel-app.vercel.app/api/walkthrough', {
+        const response = await fetch('https://yeahbuddy-walkthrough.vercel.app/api/walkthrough', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ url, pages }),
