--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       resultDiv.textContent = 'Generating video...';
 
       try {
-        const response = await fetch('https://yeahbuddy-walkthrough-7hz20jd6s-fletchs-projects.vercel.app/', {
+        const response = await fetch('https://yeahbuddy-walkthrough.vercel.app/'), {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ url, pages }),
