--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -71,19 +32,28 @@
       resultDiv.textContent = 'Generating video...';
 
       try {
-        const response = await fetch('https://yeahbuddy-walkthrough.vercel.app/', {
+        const response = await fetch('https://yeahbuddy-walkthrough.vercel.app/api/walkthrough', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ url, pages }),
         });
-        const data = await response.json();
-        if (data.videoFile) {
-          resultDiv.innerHTML = `Video generated! Download it <a href="${data.videoFile}" target="_blank">here</a>. Upload to Google Drive and share the link.`;
+        if (response.ok && response.headers.get('content-type').includes('video/mp4')) {
+          const blob = await response.blob();
+          const downloadUrl = window.URL.createObjectURL(blob);
+          const a = document.createElement('a');
+          a.href = downloadUrl;
+          a.download = 'walkthrough.mp4';
+          document.body.appendChild(a);
+          a.click();
+          window.URL.revokeObjectURL(downloadUrl);
+          resultDiv.textContent = 'Video generated! Check your downloads.';
         } else {
-          resultDiv.textContent = 'Error: ' + data.error;
+          const data = await response.json();
+          resultDiv.textContent = `Error: ${data.error || 'Unknown error'}`;
         }
       } catch (error) {
-        resultDiv.textContent = 'Error: Failed to generate video';
+        console.error('Fetch error:', error);
+        resultDiv.textContent = `Error: Failed to generate video - ${error.message}`;
       }
     });
   </script>
